force-app/main/default/objects/Error_Log__c.object
<CustomObject>
    <description>Record the errors in the running.  Then you can set up a workflow on the error log object to send email whenever a new error log is created.</description>
    <label>Error_Log</label>
    <nameField>
        <label>Error_Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error_Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Datetime__c</fullName>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailReceiver__c</fullName>
        <label>EmailReceiver</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Trace__c</fullName>
        <description>Log the details of the error.</description>
        <inlineHelpText>Developers call this class to record the details of the error in the running time.</inlineHelpText>
        <label>Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>